force-app/main/default/objects/TiposDocumento__c/TiposDocumento__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TiposDocumento</label>
</CustomObject>