force-app/main/default/objects/TiposDocumento__c/fields/ActaConstitutiva__c.field-meta.xml
<CustomField>
    <fullName>ActaConstitutiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acta Constitutiva</label>
    <type>Checkbox</type>
</CustomField>