force-app/main/default/objects/TiposDocumento__c/fields/AdjuntoA__c.field-meta.xml
<CustomField>
    <fullName>AdjuntoA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Id. de Cliente</label>
    <type>Checkbox</type>
</CustomField>