force-app/main/default/objects/TiposDocumento__c/fields/AltaSHCP__c.field-meta.xml
<CustomField>
    <fullName>AltaSHCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alta SHCP</label>
    <type>Checkbox</type>
</CustomField>