force-app/main/default/objects/TiposDocumento__c/fields/Comprobante_de_Domicilio_Afiliado__c.field-meta.xml
<CustomField>
    <fullName>Comprobante_de_Domicilio_Afiliado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comprobante de Domicilio Afiliado</label>
    <type>Checkbox</type>
</CustomField>