force-app/main/default/objects/TiposDocumento__c/fields/Constancia_de_Situaci_n_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Constancia_de_Situaci_n_Fiscal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Constancia de Situación Fiscal</label>
    <type>Checkbox</type>
</CustomField>