force-app/main/default/objects/TiposDocumento__c/fields/ConstanciaRFCCliente__c.field-meta.xml
<CustomField>
    <fullName>ConstanciaRFCCliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Constancia RFC Cliente</label>
    <type>Checkbox</type>
</CustomField>