force-app/main/default/objects/TiposDocumento__c/fields/ContratoFirmado__c.field-meta.xml
<CustomField>
    <fullName>ContratoFirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrato o Propuesta firmados</label>
    <type>Checkbox</type>
</CustomField>