force-app/main/default/objects/TiposDocumento__c/fields/CURP__c.field-meta.xml
<CustomField>
    <fullName>CURP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CURP</label>
    <type>Checkbox</type>
</CustomField>