force-app/main/default/objects/TiposDocumento__c/fields/Estado_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Cuenta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estado de Cuenta</label>
    <type>Checkbox</type>
</CustomField>