force-app/main/default/objects/TiposDocumento__c/fields/IdentificacionOficialCliente__c.field-meta.xml
<CustomField>
    <fullName>IdentificacionOficialCliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identificación Oficial</label>
    <type>Checkbox</type>
</CustomField>