force-app/main/default/objects/TiposDocumento__c/fields/PoderNotarial__c.field-meta.xml
<CustomField>
    <fullName>PoderNotarial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poder Notarial</label>
    <type>Checkbox</type>
</CustomField>