force-app/main/default/objects/TiposDocumento__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFC</label>
    <type>Checkbox</type>
</CustomField>