force-app/main/default/objects/TiposDocumento__c/fields/RFCDoc__c.field-meta.xml
<CustomField>
    <fullName>RFCDoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFC Doc</label>
    <type>Checkbox</type>
</CustomField>